[package]
name = "pallet-rwa-runtime-api"
version = "0.3.3"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
  "derive",
] }
scale-info = { version = "2.5.0", default-features = false, features = [
  "derive",
] }

sp-api = { path = "../../../../../substrate/primitives/api", default-features = false }
sp-runtime = { path = "../../../../../substrate/primitives/runtime", default-features = false }

pallet-rwa = { path = "..", default-features = false }

[features]
default = ["std"]
std = [
  "codec/std",
  "pallet-rwa/std",
  "scale-info/std",
  "sp-api/std",
  "sp-runtime/std",
]
